syntax = "proto3";

package resources.internet;

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/internet;internet";

message SearchResult {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  string url = 4;
}
