syntax = "proto3";

package services.internet;

import "resources/internet/page.proto";
import "resources/internet/search.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/services/internet;internet";

message SearchRequest {
  string search = 1;
}

message SearchResponse {
  repeated resources.internet.SearchResult results = 1;
}

message GetPageRequest {
  string domain = 1;
  string path = 2;
}

message GetPageResponse {
  optional resources.internet.Page page = 1;
}

service InternetService {
  // @perm: Name=Any
  rpc Search(SearchRequest) returns (SearchResponse);

  // @perm: Name=Any
  rpc GetPage(GetPageRequest) returns (GetPageResponse);

  // TODO domain registrar logic
}
